--- a/Minotaur/Areas/Customer/Views/Notification/Index.cshtml
+++ b/Minotaur/Areas/Customer/Views/Notification/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 <div class="container-fluid mb-5 pb-5">
-    <div><button onclick="removeAllNotifications()" class="btn btn-warning">Удалить все уведомления</button></div>
+    <div><button onclick="removeAllNotifications()" class="btn btn-warning">Очистить</button></div>
     <div class="row col-12">
-        <div id="notificationData"></div>
+        <div id="notificationData" class="align-content-center"></div>
     </div>
 </div>
 
